@@ -1,5 +1,16 @@
 2009-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Added addTorrentFile xml-rpc command which receives uploaded
+	torrent file and add download for it.
+	* src/RequestGroupMan.cc
+	* src/XmlRpcMethodFactory.cc
+	* src/XmlRpcMethodImpl.cc
+	* src/XmlRpcMethodImpl.h
+	* src/download_helper.cc
+	* src/download_helper.h
+	
+2009-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Added remove xml-rpc command which removes specified download.
 	There is a known issue: the removed unfinished downloads are
 	reported ERR when aria2 exits. They should be reported as INPR.
